# excel2csv

./: .gitignore  Cargo.toml  ssfmt-bug-report.md
docs/plans/: 2026-01-08-excel2csv-design.md  2026-01-08-excel2csv-implementation.md
examples/: create_edge_case_test.rs  create_formula_test.rs  create_test_file.rs  debug_formatting.rs  inspect_cells.rs
src/: error.rs  evaluator.rs  main.rs  reader.rs  writer.rs
