[package]
name = "excel2csv"
version = "0.1.0"
edition = "2021"
description = "Convert Excel files to CSV with formatted output"

[dependencies]
umya-spreadsheet = "2"
xlrd = { git = "https://github.com/PleaseDont/xlrd" }
csv = "1"
clap = { version = "4", features = ["derive"] }
thiserror = "1"
ssfmt = { path = "../ssfmt" }